[gd_scene load_steps=13 format=3 uid="uid://c7sw5a1uowc4y"]

[ext_resource type="Script" path="res://Lab_Room/Lab_main.gd" id="1_jl4dq"]
[ext_resource type="PackedScene" uid="uid://be2ilbacpejo3" path="res://Lab_Room/Lab.tscn" id="2_e8al8"]
[ext_resource type="PackedScene" uid="uid://bajir8gidmg11" path="res://Lab_Room/monkey.tscn" id="3_ur1yv"]
[ext_resource type="PackedScene" uid="uid://d00o0xpgxm5u" path="res://Lab_Room/beacon.tscn" id="4_673km"]
[ext_resource type="PackedScene" uid="uid://cu7w4q6q4ynh7" path="res://Lab_Room/access_panel.tscn" id="5_xmqi8"]
[ext_resource type="PackedScene" uid="uid://nhtmbhg6eyno" path="res://Lab_Room/door.tscn" id="6_ggtdf"]
[ext_resource type="PackedScene" uid="uid://8vll2l0ixeni" path="res://Lab_Room/table.tscn" id="7_6u5at"]
[ext_resource type="PackedScene" uid="uid://cbt3ka5e62wdm" path="res://Lab_Room/weapon_part.tscn" id="9_07jf7"]
[ext_resource type="PackedScene" uid="uid://cx70wwnw3nvsj" path="res://Lab_Room/page.tscn" id="9_ewwu1"]
[ext_resource type="Texture2D" uid="uid://3g42i68pwfqc" path="res://Lab_Room/assets/note_1.png" id="10_4umyl"]
[ext_resource type="PackedScene" uid="uid://bekhfx7rlge5c" path="res://Title_Screen/menu_button.tscn" id="10_lvph8"]
[ext_resource type="PackedScene" uid="uid://b2brr7ypk1g7t" path="res://Lab_Room/gun.tscn" id="12_opeai"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jl4dq")

[node name="StaticBody2D" parent="." instance=ExtResource("2_e8al8")]

[node name="monkey" parent="." instance=ExtResource("3_ur1yv")]
z_index = 1
position = Vector2(12, 198)

[node name="Beacon" parent="." instance=ExtResource("4_673km")]
z_index = 1
position = Vector2(383, 228)

[node name="AccessPanel" parent="." instance=ExtResource("5_xmqi8")]
position = Vector2(-125, 10)
scale = Vector2(1.03887, 1.08767)

[node name="Door" parent="." instance=ExtResource("6_ggtdf")]
position = Vector2(492, 174)
scale = Vector2(0.68, 0.640001)

[node name="table" parent="." instance=ExtResource("7_6u5at")]
position = Vector2(290, 425)
scale = Vector2(0.68, 0.719999)

[node name="weapon_part" parent="." instance=ExtResource("9_07jf7")]
position = Vector2(695, 341)
rotation = 1.5708
scale = Vector2(1.64, 1.68)

[node name="Page" parent="." instance=ExtResource("9_ewwu1")]
visible = false
position = Vector2(483, 388)
texture = ExtResource("10_4umyl")

[node name="Label" type="Label" parent="Page"]
offset_left = -73.0
offset_top = 231.0
offset_right = 83.0
offset_bottom = 254.0
text = "Press Enter To Close"

[node name="Menu button" parent="." instance=ExtResource("10_lvph8")]

[node name="Gun" parent="." instance=ExtResource("12_opeai")]

[connection signal="access" from="AccessPanel" to="." method="_on_access_panel_access"]
[connection signal="read" from="table" to="." method="_on_table_read"]
[connection signal="weapon1" from="weapon_part" to="." method="_on_weapon_part_weapon_1"]
